--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql": "^0.11.3",
     "graphql-server-express": "^1.1.2",
     "graphql-tools": "^1.2.2",
+    "lodash": "^4.17.4",
     "pg": "^7.3.0",
     "sequelize": "^4.8.3"
   },
