- bundled application for production - added Mocha test framework and Chai assertion library for unit testing

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
     "presets": [
-        "latest",
-        "stage-2"
+        ["env", {
+            "targets": {
+                "node": "current"
+            }
+        }]
     ]
 }
