--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "A database to keep track of all kinds of movies, series you own.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node index.js"
+    "test": "mocha --compilers js:babel-register --require chai/register-expect --timeout 5000",
+    "start": "nodemon --exec babel-node src/index.js",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && babel src --out-dir dist --copy-files",
+    "serve": "node dist/index.js"
   },
   "author": "bmorlac",
   "license": "MIT",
@@ -21,11 +24,12 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
+    "chai": "^4.1.2",
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
+    "mocha": "^3.5.3",
     "nodemon": "^1.12.0",
     "sequelize-cli": "^3.0.0-2"
   }
