--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A database to keep track of all kinds of movies, series you own.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register --require chai/register-expect --timeout 5000",
+    "test": "mocha --compilers js:babel-register --require test/chai.config --timeout 5000 test/**/*.test.js",
     "start": "nodemon --exec babel-node src/index.js",
     "clean": "rm -rf dist",
     "build": "npm run clean && babel src --out-dir dist --copy-files",
@@ -26,6 +26,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
