--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "moviedb",
   "version": "1.0.0",
   "description": "A database to keep track of all kinds of movies, series you own.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register --require test/chai.config --timeout 5000 test/**/*.test.js",
-    "start": "nodemon --exec babel-node src/index.js",
+    "test": "cross-env NODE_ENV=test mocha --compilers js:babel-register --require test/chai.config --timeout 20000 test/**/*.test.js",
+    "start": "nodemon --exec babel-node src/index.js --inspect",
     "clean": "rm -rf dist",
     "build": "npm run clean && babel src --out-dir dist --copy-files",
     "serve": "node dist/index.js"
@@ -27,11 +27,13 @@
     "babel-preset-env": "^1.6.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "cross-env": "^5.0.5",
     "eslint": "^4.6.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
     "mocha": "^3.5.3",
     "nodemon": "^1.12.0",
-    "sequelize-cli": "^3.0.0-2"
+    "sequelize-cli": "^3.0.0-2",
+    "umzug": "^2.0.1"
   }
 }
